--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
             <ul>
                 <li>Church</li>
                 <li>Socialize</li>
+                <li>Nature</li>
             </ul>
         </div>
     </body>
