--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
                 <li>Church</li>
                 <li>Socialize</li>
                 <li>Nature</li>
+                <li>Reading</li>
             </ul>
         </div>
     </body>
