Added another change

--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
                 <li>Socialize</li>
                 <li>Nature</li>
                 <li>Reading</li>
+                <li>Sunlight</li>
             </ul>
         </div>
     </body>
