Changed reading to education

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
                 <li>Church</li>
                 <li>Socialize</li>
                 <li>Nature</li>
-                <li>Reading</li>
+                <li>Education</li>
                 <li>Sunlight</li>
             </ul>
         </div>
